Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -240,7 +240,7 @@ For instance, the following commands are run from a Windows 10 dev machine which
 
 If your VM is set up with a DNS name in Azure, you could also run the same commands against the DNS name in Azure of your VM, like this command.
 
-    `PS C:\> $ENV:DOCKER_HOST = 'tcp://windockerhost.westus.cloudapp.azure.com:2375'
+    `PS C:\> $ENV:DOCKER_HOST = 'tcp://your-server.westus.cloudapp.azure.com:2375'
      PS C:\> docker info
     `
 At this point, you could run any “docker-compose” or “docker run” command from your development machine and those commands will be executed against the remote Azure VM.
@@ -249,8 +249,7 @@ At this point, you could run any “docker-compose” or “docker run” comman
 
 In this case, you can specify the certificates when connecting, like in the following example where you are obtaining the remote docker host "info", or you could do a docker-compose up, etc.
 
-PS C:\> docker --tlsverify --tlscacert=$env:USERPROFILE\.docker\rootca.cer --tlscert=$env:USERPROFILE\.docker\clientPublicKey.cer --tlskey=$env:USERPROFILE\.docker\clientPrivateKey.cer -H=tcp://windockerhost.westus.clo
-udapp.azure.com:2376 info
+PS C:\> docker --tlsverify --tlscacert=$env:USERPROFILE\.docker\rootca.cer --tlscert=$env:USERPROFILE\.docker\clientPublicKey.cer --tlskey=$env:USERPROFILE\.docker\clientPrivateKey.cer -H=tcp://your-server.westus.cloudapp.azure.com:2376 info
 
 ##### Publish the application .NET bits into a folder
 
@@ -291,7 +290,7 @@ At this point, the .NET application and SQL Server are both running as Windows C
 
 ![image](https://user-images.githubusercontent.com/1712635/30407870-e7bc6bbe-98af-11e7-90fb-79d9386d68e5.png)
 
-Finally, and provided that you have the Azure NSG rules and the Windows Server Firewall rules allowing the traffic through the TCP port used by the application (in this case the port 5114), you could test the MVC application from any machine in the Internet, like in image X-XX which uses the URL http://windockerhost.westus.cloudapp.azure.com:5114/ but the public IP could also be used like with http://your_VM_IP:5114/ 
+Finally, and provided that you have the Azure NSG rules and the Windows Server Firewall rules allowing the traffic through the TCP port used by the application (in this case the port 5114), you could test the MVC application from any machine in the Internet, like in image X-XX which uses the URL http://yourserver.westus.cloudapp.azure.com:5114/ but the public IP could also be used like with http://your_VM_IP:5114/ 
 
 ![image](https://user-images.githubusercontent.com/1712635/30407887-04be8e68-98b0-11e7-8d0c-7f757826523c.png)
 
@@ -373,7 +372,7 @@ Once you have the image at any accessible Docker Registry it is only a matter of
 - Edit the .env and set the VM IP or VM DNS name VM in the ESHOP_EXTERNAL_DNS_NAME_OR_IP  variable, like in the following text.
 
     `#.env file
-     ESHOP_EXTERNAL_DNS_NAME_OR_IP=windockerhost.westus.cloudapp.azure.com
+     ESHOP_EXTERNAL_DNS_NAME_OR_IP=yourserver.westus.cloudapp.azure.com
      `
 - Install docker-compose tool in the VM. By default, the current Windows Server with Window Containers does not have the docker-compose tool. In order to install it, follow the instructions from Docker, [here](https://docs.docker.com/compose/install/#install-compose), which is basically running the following PowerShell command with Admin rights.
 
