Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -403,7 +403,16 @@ You should see a similar execution to the following image.
 
 
 ### Scenario C: Deploying from VSTS CD pipeline to an Azure VM using the Docker Tasks in VSTS
-- TBD - Using Visual Studio Team Services Docker tasks deploying to the Docker hosts. 
+
+Building the Docker image from VSTS:
+
+![image](https://user-images.githubusercontent.com/1712635/30527536-c98c2daa-9bde-11e7-8406-3d15515bc73a.png)
+
+Pushing the Docker image to a Docker Registry (Docker Hub or Azure Container Registry):
+
+![image](https://user-images.githubusercontent.com/1712635/30527551-12a5e8aa-9bdf-11e7-8c6c-269b3dd34b9a.png)
+
+Deploying to Docker Host from Visual Studio Team Services Release pipeline. 
 
 ![image](https://user-images.githubusercontent.com/1712635/30403848-692350f4-9898-11e7-881a-e302f7fc7385.png)
 
