--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -404,17 +404,26 @@ You should see a similar execution to the following image.
 
 ### Scenario C: Deploying from VSTS CD pipeline to an Azure VM using the Docker Tasks in VSTS
 
-Building the Docker image from VSTS:
+DevOps scenario:
+
+#### ![image](https://user-images.githubusercontent.com/1712635/30403848-692350f4-9898-11e7-881a-e302f7fc7385.png)
+
+##### Building the Docker image from VSTS:
 
 ![image](https://user-images.githubusercontent.com/1712635/30527536-c98c2daa-9bde-11e7-8406-3d15515bc73a.png)
 
-Pushing the Docker image to a Docker Registry (Docker Hub or Azure Container Registry):
+##### Pushing the Docker image to a Docker Registry (Docker Hub or Azure Container Registry):
 
 ![image](https://user-images.githubusercontent.com/1712635/30527551-12a5e8aa-9bdf-11e7-8c6c-269b3dd34b9a.png)
 
-Deploying to Docker Host from Visual Studio Team Services Release pipeline. 
 
-![image](https://user-images.githubusercontent.com/1712635/30403848-692350f4-9898-11e7-881a-e302f7fc7385.png)
+##### Deploying to Docker Host from Visual Studio Team Services Release pipeline tasks. 
+
+Environment definition
+![image](https://user-images.githubusercontent.com/1712635/30527624-a7dc312c-9bdf-11e7-9d3b-77f3c968a373.png)
+
+Release/Deployment Tasks
+![image](https://user-images.githubusercontent.com/1712635/30527667-f8972ed2-9bdf-11e7-9b97-79a9ad6946a3.png)
 
 - TBD (Plain)
 
