Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -132,10 +132,10 @@ In the Docker host VM (Windows Server 2016) create the following folder:
 
     `mkdir c:\DockerCerts`
 
-Then, copy the following PowerShell Script into it and run it, like the following:
+Then, copy the following PowerShell Script into the folder (credits for artisticcheese) 
+https://github.com/dotnet-architecture/eShopModernizing/blob/master/VM/DockerCerts-Generation/CreateDockerCerts.ps1
 
-
-Generate the certificate files:
+And run it, like in the following screenshot generating the certificate files:
 ![image](https://user-images.githubusercontent.com/1712635/30525511-d98ee354-9bbc-11e7-9989-1645d4110a90.png)
 
 Copy the server certificates plus the rooCA certificate into the folder **C:\ProgramData\docker\certs.d**
