--- a/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
+++ b/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
@@ -71,7 +71,7 @@ https://docs.microsoft.com/en-us/azure/container-service/kubernetes/container-se
 
    If re-using already an created ssh key pair, you can add something like the following:
 
-   `--ssh-key-value ~/acs/sshkeys/acscesar.pub \`
+   `--ssh-key-value ~/.ssh/id_rsa.pub`
 
 3. **Install kubectl** if you don't have it installed in your PC
    To connect to the Kubernetes cluster from your client computer, use kubectl, the Kubernetes command-line client.
@@ -90,7 +90,7 @@ https://docs.microsoft.com/en-us/azure/container-service/kubernetes/container-se
 
    Again, if re-using an already created ssh key pair, you can add something like the following:
 
-   `--ssh-key-value ~/acs/sshkeys/acscesar.pub \`
+   `--ssh-key-value ~/.ssh/id_rsa.pub`
 
 5. **Check the connection with kubectl** connecting to the cluster by retrieving nodes list: 
 
