Updated 04. How to deploy your Windows Containers based apps into Kubernetes in Azure Container Service (Including C CD) (markdown)

--- a/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
+++ b/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
@@ -90,7 +90,7 @@ https://docs.microsoft.com/en-us/azure/container-service/kubernetes/container-se
 
    Again, if re-using an already created ssh key pair, you can add something like the following:
 
-   `--ssh-key-value ~/.ssh/id_rsa.pub`
+   `--ssh-key-value ~/.ssh/id_rsa`
 
 5. **Check the connection with kubectl** connecting to the cluster by retrieving nodes list: 
 
