--- a/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
+++ b/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
@@ -69,7 +69,7 @@ https://docs.microsoft.com/en-us/azure/container-service/kubernetes/container-se
 
    `az acs create --orchestrator-type=kubernetes --resource-group eShopK8sWinResGrp --name=eShopK8sWinCluster --agent-count=2 --generate-ssh-keys --windows --admin-username youruser --admin-password your@password`
 
-   If re-using already an created ssh key pair, you can add something like the following:
+   If re-using already an created ssh key pair, you can add a pointer to the public key, something like the following:
 
    `--ssh-key-value ~/.ssh/id_rsa.pub`
 
@@ -88,9 +88,9 @@ https://docs.microsoft.com/en-us/azure/container-service/kubernetes/container-se
 
    `az acs kubernetes get-credentials --resource-group=eShopK8sWinResGrp --name=eShopK8sWinCluster`
 
-   Again, if re-using an already created ssh key pair, you can add something like the following:
+   Again, if re-using an already created ssh key pair, you can add a pointer to the private key, like the following:
 
-   `--ssh-key-value ~/.ssh/id_rsa`
+   `--ssh-key-file ~/.ssh/id_rsa`
 
 5. **Check the connection with kubectl** connecting to the cluster by retrieving nodes list: 
 
