Updated 04. How to deploy your Windows Containers based apps into Kubernetes in Azure Container Service (Including C CD) (markdown)

--- a/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
+++ b/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
@@ -32,7 +32,7 @@ TBD
 ## Position PowerShell into the eShopModernizedMVC-K8s\ServiceDeployments folder
 Clone the Repo code into your hard drive.
 Open a PowerShell with Admin privileges and run:
-   `cd C:\Your-Path-to-eShopModernizing\Kubernetes\eShopModernizedMVC-K8s\**ServiceDeployments**`
+   `cd C:\Your-Path-to-eShopModernizing\Kubernetes\eShopModernizedMVC-K8s\ServiceDeployments`
 
 ## Connect to Azure from Azure CLI (PowerShell or Bash)
 1. Run **Azure CLI**: In order to run the Azure CLI locally, (you need Azure CLI version 2.0.4 or later) you need to install it if you don't have it. Follow this procedure: [Install Azure CLI 2.0](https://docs.microsoft.com/en-us/cli/azure/install-azure-cli)
@@ -112,11 +112,11 @@ https://docs.microsoft.com/en-us/azure/container-service/kubernetes/container-se
 ## Deploying the eShopModernizedMVC app into the Kubernetes Cluster
 1. In case you are positioned in a different place, make sure you move, in PowerShell, to your deployment file path:
 
-   `cd C:\Your-Path-to-eShopModernizing\Kubernetes\eShopModernizedMVC-K8s\**ServiceDeployments**`
+   `cd C:\Your-Path-to-eShopModernizing\Kubernetes\eShopModernizedMVC-K8s\ServiceDeployments`
 
 2. Use or create a similar deployment file than this: [eshop-modernized-mvc-k8s-services-deployment.yml](https://github.com/dotnet-architecture/eShopModernizing/blob/master/Kubernetes/eShopModernizedMVC-K8s/ServiceDeployments/eshop-modernized-mvc-k8s-services-deployment.yml)
 
-3. Run in PowerShell within the path C:\Your-Path-to-eShopModernizing\Kubernetes\eShopModernizedMVC-K8s\**ServiceDeployments**
+3. Run in PowerShell within the path `C:\Your-Path-to-eShopModernizing\Kubernetes\eShopModernizedMVC-K8s\ServiceDeployments`
  
     `kubectl create -f eshop-modernized-mvc-k8s-services-deployment.yml`
 
