Updated 04. How to deploy your Windows Containers based apps into Kubernetes in Azure Container Service (Including C CD) (markdown)

--- a/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
+++ b/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
@@ -137,7 +137,12 @@ https://docs.microsoft.com/en-us/azure/container-service/kubernetes/container-se
 
 5. Run eShopModernizedMVC from Kubernetes!
     **IMPORTANT**: The first time you might need to wait a few minutes until the SQL Server Docker image is pulled.
-    So, finally, you can test the app by typing the IPO you get like in the following case:
+
+    You can check how the deployment is going by taking a look to the Kubernetes dashboard, like in the following screenshot where you can see how the containers are still being deployed (You need to set the `kubectl proxy` first):
+
+    ![image](https://user-images.githubusercontent.com/1712635/30572704-3280de9e-9ca4-11e7-8527-b4d45f4acdf6.png)
+
+    So, finally, you can test the app by typing the IP you get like in the following case:
 
     `http://104.42.224.204/`
 
