Updated 04. How to deploy your Windows Containers based apps into Kubernetes in Azure Container Service (Including C CD) (markdown)

--- a/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
+++ b/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
@@ -142,6 +142,8 @@ https://docs.microsoft.com/en-us/azure/container-service/kubernetes/container-se
 
     ![image](https://user-images.githubusercontent.com/1712635/30572704-3280de9e-9ca4-11e7-8527-b4d45f4acdf6.png)
 
+    You can also check the state of the deployment by typing `kubectl get services` where you'll see the EXTERNAL IP to use and ports to use when the deployment is finished.
+
     So, finally, you can test the app by typing the IP you get like in the following case:
 
     `http://104.42.224.204/`
