Updated 04. How to deploy your Windows Containers based apps into Kubernetes in Azure Container Service (Including C CD) (markdown)

--- a/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
+++ b/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
@@ -26,7 +26,7 @@ TBD
 ## Prerequisites
 - Azure Subscription
 - Azure CLI installed on dev machine (explained below)
-- Kubectl (Kubernetes CLI) installed on dev machine
+- Kubectl (Kubernetes CLI) installed on dev machine and in PATH
 - Access to eShopModernizedMVC image at Docker Hub (or any other Docker Registry)
 
 ## Position PowerShell into the eShopModernizedMVC-K8s\ServiceDeployments folder
@@ -83,6 +83,8 @@ https://docs.microsoft.com/en-us/azure/container-service/kubernetes/container-se
    On Windows, run this command as an administrator:
 
    `az acs kubernetes install-cli`
+
+   Don't forget to add the "C:\Program Files (x86)" folder path to your system environment PATH variable.
 
 4. **Connect to the Kubernetes cluster** and set the ssh key files to your local PC
 
