Updated 04. How to deploy your Windows Containers based apps into Kubernetes in Azure Container Service (Including C CD) (markdown)

--- a/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
+++ b/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
@@ -110,8 +110,19 @@ https://docs.microsoft.com/en-us/azure/container-service/kubernetes/container-se
      
      ![image](https://user-images.githubusercontent.com/1712635/30345114-d232ae04-97b8-11e7-9b33-fe7345ef6975.png)
      Leave it open so that you can check there, changes applied later.
+
+In order to have a flexible deployment, instead of deploying the SQL container along with the applications, we have created separated deployment .yml files. This is a better option since the SQL container is heavier, a standard image and you don't need to re-deploy as often as the apps containers.
+
+## Deploy the SQL Server Windows Container into the Kubernetes Cluster
+1. In case you are positioned in a different place, make sure you move, in PowerShell, to your deployment file path:
+
+    `cd D:\GITREPOS\eShopModernizing-master\Kubernetes\eShopModernizedSQL-K8s`
+
+2. Run in PowerShell the kubectl to deploy the SQL Server container
+ 
+    `kubectl create -f eshop-modernized-sql-k8s-services-deployment.yml`
    
-## Deploying the eShopModernizedMVC app into the Kubernetes Cluster
+## Deploy the eShopModernizedMVC app into the Kubernetes Cluster
 1. In case you are positioned in a different place, make sure you move, in PowerShell, to your deployment file path:
 
    `cd C:\Your-Path-to-eShopModernizing\Kubernetes\eShopModernizedMVC-K8s\ServiceDeployments`
