Updated 04. How to deploy your Windows Containers based apps into Kubernetes in Azure Container Service (Including C CD) (markdown)

--- a/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
+++ b/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
@@ -116,7 +116,7 @@ In order to have a flexible deployment, instead of deploying the SQL container a
 ## Deploy the SQL Server Windows Container into the Kubernetes Cluster
 1. In case you are positioned in a different place, make sure you move, in PowerShell, to your deployment file path:
 
-    `cd D:\GITREPOS\eShopModernizing-master\Kubernetes\eShopModernizedSQL-K8s`
+    `cd C:\Your-Path-to-eShopModernizing\Kubernetes\eShopModernizedSQL-K8s`
 
 2. Run in PowerShell the kubectl to deploy the SQL Server container
  
