Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -22,8 +22,7 @@ However, before trying this scenario deploying to an orchestrator, it is recomme
 
 ### Scenario B: Deployment to to Service Fabric cluster from from CI/CD pipelines in VSTS
 
-TBD
-
+![image](https://user-images.githubusercontent.com/1712635/30787059-bd74a8ba-a135-11e7-8a1d-7eb580f0bd56.png)
 
 ## Prerequisites
 - Have ready an Azure subscription
