Updated 04. How to deploy your Windows Containers based apps into Kubernetes in Azure Container Service (Including C CD) (markdown)

--- a/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
+++ b/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
@@ -21,7 +21,7 @@ However, before trying this scenario deploying to an orchestrator, it is recomme
 
 ### Scenario B: Deployment to K8s cluster from CI/CD pipelines in VSTS
 
-TBD
+![image](https://user-images.githubusercontent.com/1712635/30787073-f2f5e364-a135-11e7-918a-1472b4f3ee93.png)
 
 ## Prerequisites
 - Azure Subscription
