Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -5,7 +5,7 @@ Running an existing application in a Windows container on a Service Fabric clust
 This walkthrough assumes a basic understanding of Docker. You can learn about Docker by reading the [Docker Overview](https://docs.docker.com/engine/understanding-docker/).
 
 ##  Goals for this walkthrough
-This post describes how to deploy eShopModernizedMVC to Kubernetes but deploying the eShopModernizedWebForms should be pretty similar, so you can use almost the same procedure but using different deployment .yml files.
+This post describes how to deploy eShopModernizedMVC to Service Fabric, but deploying the eShopModernizedWebForms should be pretty similar, so you can use almost the same procedure but using different deployment .yml files.
 
 Learn how to deploy a Windows Container based application into a Service Fabric cluster in Azure. Deploying to Service Fabric, from scratch, requires a 2-step process:
 1. Deploy a Service Fabric cluster into Azure (Or any other environment)
