--- a/14.-Using-Application-Insights-in-eShopOnContainers.md
+++ b/14.-Using-Application-Insights-in-eShopOnContainers.md
@@ -13,10 +13,11 @@ As for the rest of variables it needs to be set in different ways depending on t
 Open the Azure portal, click new, and search for Application Insights. In the creation form select Application Type `Asp.NET web application`.
 
 ![Create Insights](img/appinsights/create-insights.png)
+<img src="img/appinsights/create-insights.png">
 
 Once created the App Insights, go to the Configuration and enable 'Multi-role application map'.
 
-![Enable multi role map](./img/appinsights/settings-insights.png)
+![Enable multi role map](img/appinsights/settings-insights.png)
 
 Finally retrieve the Instrumentation Key from you Application Insights service and set it in your application as the value for the `AppInsightsInstrumentationKey` variable.
 
