Updated 14. Using Application Insights in eShopOnContainers (markdown)

--- a/14.-Using-Application-Insights-in-eShopOnContainers.md
+++ b/14.-Using-Application-Insights-in-eShopOnContainers.md
@@ -12,8 +12,7 @@ As for the rest of variables it needs to be set in different ways depending on t
 ## Create Azure Application Insights
 Open the Azure portal, click new, and search for Application Insights. In the creation form select Application Type `Asp.NET web application`.
 
-![Create Insights](img/appinsights/create-insights.png)
-<img src="img/appinsights/create-insights.png">
+![Create Insights](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/appinsights/create-insights.PNG)
 
 Once created the App Insights, go to the Configuration and enable 'Multi-role application map'.
 
