Updated 14. Using Application Insights in eShopOnContainers (markdown)

--- a/14.-Using-Application-Insights-in-eShopOnContainers.md
+++ b/14.-Using-Application-Insights-in-eShopOnContainers.md
@@ -16,7 +16,7 @@ Open the Azure portal, click new, and search for Application Insights. In the cr
 
 Once created the App Insights, go to the Configuration and enable 'Multi-role application map'.
 
-![Enable multi role map](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/appinsights/settings-insights.png)
+![Enable multi role map](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/appinsights/settings-insights.PNG)
 
 Finally retrieve the Instrumentation Key from you Application Insights service and set it in your application as the value for the `AppInsightsInstrumentationKey` variable.
 
