Updated 04. How to deploy your Windows Containers based apps into Kubernetes in Azure Container Service (Including C CD) (markdown)

--- a/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
+++ b/04.-How-to-deploy-your-Windows-Containers-based-apps-into-Kubernetes-in-Azure-Container-Service-(Including-C-CD).md
@@ -192,4 +192,29 @@ https://docs.microsoft.com/en-us/azure/container-service/kubernetes/
 
 
 ## Deploying from VSTS CD pipeline to Kubernetes in ACS  
-- TBD (Plain)
+
+As a pre-requisite we need the images pushed to our container registry, as we have shown in the [section 3 of the wiki about the CI CD for Azure VMs](https://github.com/dotnet-architecture/eShopModernizing/wiki/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD)#scenario-c-deploying-from-vsts-cd-pipeline-to-an-azure-vm-using-the-docker-tasks-in-vsts)
+
+Our pipeline will take as artifact the github repository, where we have the Kubernetes configuration files. 
+
+![CD pipeline](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdk8s/CDPipeline.PNG)
+
+
+![CD artifact](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdk8s/CDArtifact.PNG)
+
+The tasks of the release basically are deploying the services and then refreshing the pods to update the running versions of the pods to the new ones. First we deploy the SQL image using the 'Deploy to Kubernetes' task. We are simply passing here the configuration file of the SQL container for Kubernetes that we have stored in our repository.
+
+![Deploy SQL](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdk8s/DeploySQL.PNG)
+
+The deployment of the MVC application is equal to the SQL deployment.
+
+![Deploy MVC](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdk8s/DeployMVC.PNG)
+
+Finally we refresh the pod for MVC
+
+![Refresh pod](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdk8s/RefreshPOD.PNG)
+
+In the case of the CD for the WebForms application we repeat the process, but changing the MVC application by the Webforms one.
+
+![Deploy WebForms](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdk8s/DeployWebForms.PNG)
+
