Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -286,7 +286,49 @@ You continue to incur charges while the cluster is running, consider [deleting y
 
 ## Deploying from VSTS CD pipeline to Service Fabric  
 
-- TBD (Plain)
+As a pre-requisite we need the images pushed to our container registry, as we have shown in the [section 3 of the wiki about the CI CD for Azure VMs](https://github.com/dotnet-architecture/eShopModernizing/wiki/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD)#scenario-c-deploying-from-vsts-cd-pipeline-to-an-azure-vm-using-the-docker-tasks-in-vsts) Our pipeline will take as artifact the github repository, where we have the Kubernetes configuration files. 
+
+![CD pipeline](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdservicefabric/CDPipeline.PNG)
+
+
+![CD artifact](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdservicefabric/CDArtifact.PNG)
+
+The tasks of the release deploy the services. The first step is to replace the tokens. This is an optional step to update the environment variables using variables of the Release. This task will be explained at the end of this section. The first mandatory step is to deploy the MVC application. We use the 'Service Fabric Application Deployment' task. We have to pass here the Application package of our Service Fabric project for the service, and the 'Publish Profile' for the variables.
+
+![Deploy SQL](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdservicefabric/DeployMVC.PNG)
+
+The deployment of the SQL container is equal to the previous task but pointing to the SQL Servide Fabric project files.
+
+![Deploy MVC](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdservicefabric/DeploySQL.PNG)
+
+In the case of the CD for the WebForms application we repeat the previous process, but changing the MVC application by the Webforms one.
+
+![Deploy WebForms](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdservicefabric/DeployWebForms.PNG)
+
+Yo can see that we have disabled the SQL deployment task for the WebForms CD. In case that you want to launh the CD for MVC and Webforms to the same Service Fabric Cluster you will not want to deploy twice the SQL, so it has sense to disable this step in one of your CD pipelines. Otherwise the SQL deployment should be enabled. 
+
+### Updating environment variables with VSTS variables 
+
+With Service Fabric, we can define the variables that will change for each deployment and store them in the Publish Profile. In this case we have used the Cloud.xml file inside the 'eShopLegacyWebApps\ServiceFabric\eShopModernizedMVC-ServiceFabricApp\ApplicationParameters' folder. There we have put for instance the variable to store the Application Insights Instrument Key.
+
+```
+<?xml version="1.0" encoding="utf-8"?>
+<Application Name="fabric:/eShopModernizedMVC_ServiceFabricApp" xmlns="http://schemas.microsoft.com/2011/01/fabric" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <Parameters>
+    <Parameter Name="MVC_Container_InstanceCount" Value="-1" />
+    <Parameter Name="InstrumentationKey" Value="#{your_app_insights_instrument_key}#" />
+  </Parameters>
+</Application>
+```
+
+We will set this value in the release process, using the 'Replace Tokens' task. We have set the task to take all the xml files and replace the pattern '{key_name}#' by the key_name if this one is found as a variable in the release.
+
+ ![Replace Tokens](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdservicefabric/ReplaceTokens.PNG)
+
+ In our example we have added this `your_app_insights_instrument_key` to the variables in the CD.
+
+ ![Environment variables](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/cicdservicefabric/EnvironmentVariables.PNG)
+
 
 
 
