Updated 09. How to add authentication authorization with Azure Active Directory (markdown)

--- a/09.-How-to-add-authentication-authorization-with-Azure-Active-Directory.md
+++ b/09.-How-to-add-authentication-authorization-with-Azure-Active-Directory.md
@@ -4,13 +4,28 @@ The implementation done here is based in this [Azure sample provided by Microsof
 
 1. Sign in to the [Azure portal](https://portal.azure.com).
 2. On the top bar, click on your account and under the **Directory** list, choose the Active Directory tenant where you wish to register your application.
+
+![Select tenant](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/aad/aad_directory.png)
+
 3. Click on **More Services** in the left hand nav, and choose **Azure Active Directory**.
+
+![Select AAD](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/aad/aad_search.png)
+
 4. Click on **App registrations** and choose **Add**.
+
+![App registration](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/aad/aad_settings_3.PNG)
+
 5. Enter a friendly name for the application, for example 'eShopModernizedMVC' in our case and select 'Web Application and/or Web API' as the Application Type. For the sign-on URL, enter the base URL for the sample, which follows the schema by default `http://<IP of the Doker host>:<open port for the service>/`. Since we have chosen for our modernizing MVC app the port 5115, the base URL is `http://<your IP>:5115/`. Click on **Create** to create the application.
 6. While still in the Azure portal, choose your application, click on **Settings** and choose **Properties**.
+
+![App settings](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/aad/aad_settings.png)
+
 7. Find the Application ID value and copy it to the clipboard. It will be used for the configuration of the application.
-8. In the same page, change the `logoutUrl` property to `https://<IP of the Docker host>:5115/Account/EndSession`.  This is the default single sign out URL for this sample.
-9. For the App ID URI, enter `https://<your_tenant_name>/WebApp-OpenIDConnect-DotNet`, replacing `<your_tenant_name>` with the name of your Azure AD tenant. 
+8. In the same page, set the `logoutUrl` property to `https://<IP of the Docker host>:5115/Account/EndSession`.  This is the default single sign out URL for this sample.
+9. For the App ID URI, it must have already the value `https://<your_tenant_name>/WebApp-OpenIDConnect-DotNet`, but in case it is different just replace the `<your_tenant_name>` part with the name of your Azure AD tenant. The rest must remain the same.
+10. The last point should be correct as well, but review under the **Reply URLs** section. There normally you must have the URLs where you will redirect from your application (the home page by default). Since you could have more than one in your application, you can add here more than one.
+
+![App settings](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/aad/aa_reply_uris.PNG)
 
 ## Protect the dockerized MVC application with OpenID Connect and AAD
 1. In the project properties, go to Web properties, set the Project Url to be the SSL URL.
