Updated 09. How to add authentication authorization with Azure Active Directory (markdown)

--- a/09.-How-to-add-authentication-authorization-with-Azure-Active-Directory.md
+++ b/09.-How-to-add-authentication-authorization-with-Azure-Active-Directory.md
@@ -71,7 +71,16 @@ In this case we have added a mechanism to disable authentication by configuratio
 6. In the `Views` --> `Shared` folder, create a new partial view `_LoginPartial.cshtml`.  Replace the contents of the file with the contents of the file of same name from the sample.
 7. In the `Views` --> `Shared` folder, add to `_Layout.cshtml` the `@Html.Partial("_LoginPartial")` line to make it visible in the main view, just as in our sample.
 8. Create a new empty controller called `AccountController`.  Replace the implementation with the contents of the file of same name from the sample.
-9. If you want the user to be required to sign-in before they can see any page of the app, then in the `HomeController`, decorate the `HomeController` class with the `[Authorize]` attribute.  If you leave this out, as in our example, the user will be able to see the home page of the app without having to sign-in first, and can click the sign-in link on that page to get signed in. In our example we have securized only the actions that modifies the catalog (Create, Edit an Delete products). We have achieved this by adding the `[Authorize]` attribute to the actions instead to the whole class.
+9. If you want the user to be required to sign-in before they can see any page of the app, then in the `HomeController`, decorate the `HomeController` class with the `[Authorize]` attribute.  If you leave this out, as in our example, the user will be able to see the home page of the app without having to sign-in first, and can click the sign-in link on that page to get signed in. In our example we have securized only the actions that modifies the catalog (Create, Edit an Delete products). We have achieved this by adding the `[Authorize]` attribute to the actions instead to the whole class. For instance here we add the attribute to the `Edit` action from the `CatalogController`:
+
+```C#
+[Authorize]
+public ActionResult Edit(int? id)
+{
+    ....
+}
+```
+ 
 10. In `web.config`, in `<appSettings>`, create keys for the AAD:
 ```
 <add key="UseAzureActiveDirectory" value="false"/>
