Updated 14. Using Application Insights in eShopOnContainers (markdown)

--- a/14.-Using-Application-Insights-in-eShopOnContainers.md
+++ b/14.-Using-Application-Insights-in-eShopOnContainers.md
@@ -36,10 +36,11 @@ Another metric, this one automatically retrieved by default, are the web request
 
 For the requests as extra information you can see the field 'Cloud role name'. In this field we store the name of the service, allowing us to filter all the requests by the name of the service we want to. 'Cloud role name' parameter has been configured in the applications with the class `MyTelemetryInitializer`, a custom telemetry initializer which implements `ITelemetryInitializer`. Otherwise the parameter will not appear. You can review this initializer to add your own values to the Cloud role name.
 
-In order to get some extra information from the metrics when the services are in a Service Fabric cluster, we have installed the optional Nuget package Microsoft.ApplicationInsights.ServiceFabric. Here we obtain information about the node where the container is:
+### Obtainning extra information from the Service Fabric cluster
+In order to get some extra information from the metrics when the services are in a Service Fabric cluster, we have installed the optional Nuget package Microsoft.ApplicationInsights.ServiceFabric. No extra configuration is required because the automatic installation of the package via nuget manager handles all the changes. Thanks to this package, we can obtain information about the node where the container is:
 
 ![Get request](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/appinsights/request-metrics.png)
 
-In this case as you can notice that 'Clour role name' parameter does not appear here. By clicking the `...` at the end of the property list, we can see again the configured 'Clour role name' parameter with the name of the service, in this case the eShopModernizedWebForms:
+In this case as you can notice that 'Cloud role name' parameter does not appear here. By clicking the `...` at the end of the property list, we can see again the configured 'Clour role name' parameter with the name of the service, in this case the eShopModernizedWebForms:
 
 ![Detailed request metrics](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/appinsights/request-details-metrics.png)
