Updated 14. Using Application Insights in eShopOnContainers (markdown)

--- a/14.-Using-Application-Insights-in-eShopOnContainers.md
+++ b/14.-Using-Application-Insights-in-eShopOnContainers.md
@@ -14,11 +14,17 @@ Open the Azure portal, click new, and search for Application Insights. In the cr
 
 ![Create Insights](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/appinsights/create-insights.PNG)
 
-Once created the App Insights, go to the Configuration and enable 'Multi-role application map'.
+Finally retrieve the Instrumentation Key from you Application Insights service and set it in your application as the value for the `AppInsightsInstrumentationKey` variable.
+
+### Monitoring multi-component applications
+
+If we have multiple applications, each in its container, sending metrics to the same Application Insights resource, we have extra functionality to facilitate the distinction of the different components, thanks to the 'Multi-role application map' and the 'Cloud-role name'. Once created the App Insights, go to the Configuration and enable 'Multi-role application map'.
 
 ![Enable multi role map](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/appinsights/settings-insights.PNG)
 
-Finally retrieve the Instrumentation Key from you Application Insights service and set it in your application as the value for the `AppInsightsInstrumentationKey` variable.
+Once enabled you can go to the Application map and you will see there the different components, one per 'Cloud-role name'. Remember that you must configure the 'Cloud_role name'  in your applications as explained at the begining of this entry. In the case of having installed Service Fabric package for Application insights the Cloud-role name will be set by the library automatically and you do not need to configure it manually. In the next image we can see the MVC_ContainerPkg and the Webforms_ContainerPkg, both the names of our services added by the Service Fabric configuration, and the eShopModernizedMVC and eShopModernizedWebforms components, both running in a VM and with the name set using the Telemetry Initializer in the code of the applications.
+
+![Role map](https://github.com/dotnet-architecture/eShopModernizing/blob/master/img/appinsights/ainsights_rolemap.PNG)
 
 ## Different kind of metrics in Azure Application Insights
 
